<resources>
    <string name="app_name">My Final Project</string>
    <string name="title_textview">Our Recipes</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="delete_msg">Are you sure you want to delete this recipe?</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_msg">Recipe Deleted</string>
    <string name="canceled_msg">Canceled</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="surprise_me_msg">Thank you for trusting us!&#10;Hope you will enjoy the recipe we chose :)</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="added_msg">Recipe was added</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_recipe">Add recipe</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="remove_msg">Do you want to remove this recipe from favorites?</string>
    <string name="remove">Remove</string>
    <string name="removeded_msg">Recipe removed from favorites</string>
</resources>