<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_layout"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.MainActivity"
android:background="@color/project_light">

<TextView
    android:id="@+id/title_textview"
    android:text="@string/title_textview"
    android:textSize="45sp"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"/>

<Button
    android:id="@+id/all_recipes_button"
    android:text="@string/recipes"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="16dp"/>

<Button
    android:id="@+id/all_favorites_button"
    android:text="@string/favorites"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="16dp"/>

<Button
    android:id="@+id/surprise_button"
    android:text="@string/surprise_me"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"/>
</LinearLayout>
