<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/project_light"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/project_light"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/recipeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/project_dark"
            android:padding="16dp"
            android:hint="@string/recipe_name" />

        <EditText
            android:id="@+id/ingredientsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/project_dark"
            android:padding="16dp"
            android:hint="@string/ingredients" />

        <EditText
            android:id="@+id/instructionsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/project_dark"
            android:padding="16dp"
            android:hint="@string/instructions" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe"
            android:backgroundTint="@color/project_dark"
            android:textColor="@color/project_light"/>
    </LinearLayout>
</ScrollView>
